--- a/Lesson2_SGD.ipynb
+++ b/Lesson2_SGD.ipynb
@@ -6,7 +6,7 @@
       "name": "Lesson2-SGD.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP561gfNy2bwgXz/G+qKYOo",
+      "authorship_tag": "ABX9TyPjQOQ1Ehel6+A29Vxue5/g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,11 +74,11 @@
       "metadata": {
         "id": "LOLzpyVcsEis",
         "colab_type": "code",
+        "outputId": "9bf76368-22e2-4b98-b42f-1d0237901cf6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "9bf76368-22e2-4b98-b42f-1d0237901cf6"
+        }
       },
       "source": [
         "n=100\n",
@@ -88,7 +88,7 @@
         "#display some values\n",
         "x[:5]"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -113,16 +113,16 @@
       "metadata": {
         "id": "smihmWi6swmS",
         "colab_type": "code",
+        "outputId": "73437f86-8caf-42ea-cfe9-a39a15dc89b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "73437f86-8caf-42ea-cfe9-a39a15dc89b5"
+        }
       },
       "source": [
         "a = tensor(3.,2); a"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -157,16 +157,16 @@
       "metadata": {
         "id": "UqWJ-WdAtAX2",
         "colab_type": "code",
+        "outputId": "c3272ffe-9adf-413c-c8b7-bfde0b81ef24",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "c3272ffe-9adf-413c-c8b7-bfde0b81ef24"
+        }
       },
       "source": [
         "plt.scatter(x[:,0], y);"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -234,17 +234,17 @@
       "metadata": {
         "id": "B7p4EBo-uBOu",
         "colab_type": "code",
+        "outputId": "b93aa183-39eb-4bb1-aecd-a0f18ef2d8e8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b93aa183-39eb-4bb1-aecd-a0f18ef2d8e8"
+        }
       },
       "source": [
         "y_hat = x@a\n",
         "mse(y_hat, y)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -265,17 +265,17 @@
       "metadata": {
         "id": "_bMeCT7duDxM",
         "colab_type": "code",
+        "outputId": "27c7c1a6-57e3-4283-b8c4-b8e0e1440e80",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "27c7c1a6-57e3-4283-b8c4-b8e0e1440e80"
+        }
       },
       "source": [
         "plt.scatter(x[:,0],y)\n",
         "plt.scatter(x[:,0],y_hat);"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -330,16 +330,16 @@
       "metadata": {
         "id": "xMKpvmQBxS7p",
         "colab_type": "code",
+        "outputId": "f0a8a892-1541-4128-d85e-e727344f301e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "f0a8a892-1541-4128-d85e-e727344f301e"
+        }
       },
       "source": [
         "a = nn.Parameter(a); a"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -368,8 +368,10 @@
         "    y_hat = x@a\n",
         "    loss = mse(y, y_hat)\n",
         "    if t % 10 == 0: print(loss)\n",
+        "    #compute gradients wrt weight parameter\n",
         "    loss.backward()\n",
         "    with torch.no_grad():\n",
+        "        #subtract the gradient (in-place operation)\n",
         "        a.sub_(lr * a.grad)\n",
         "        a.grad.zero_()"
       ],
@@ -381,17 +383,17 @@
       "metadata": {
         "id": "BgY1to4-xbEg",
         "colab_type": "code",
+        "outputId": "3302e6d4-dcf1-4f1d-eba5-abebd7a19c46",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
-        },
-        "outputId": "3302e6d4-dcf1-4f1d-eba5-abebd7a19c46"
+        }
       },
       "source": [
         "lr = 1e-1\n",
         "for t in range(100): update()"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -416,17 +418,17 @@
       "metadata": {
         "id": "aSn7rSQgxrhC",
         "colab_type": "code",
+        "outputId": "7c9cdad6-4195-43ee-d865-23769bfcb3a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "7c9cdad6-4195-43ee-d865-23769bfcb3a8"
+        }
       },
       "source": [
         "#Print the parameter 'a' after optimization \n",
         "a"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -448,11 +450,11 @@
       "metadata": {
         "id": "e-y_BwD2x7z4",
         "colab_type": "code",
+        "outputId": "fe64f5da-930c-4bd0-de65-9a6f425deb9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "fe64f5da-930c-4bd0-de65-9a6f425deb9c"
+        }
       },
       "source": [
         "plt.scatter(x[:,0],y)\n",
@@ -460,7 +462,7 @@
         "a.requires_grad=False\n",
         "plt.scatter(x[:,0],x@a);\n"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -483,8 +485,24 @@
         "colab_type": "text"
       },
       "source": [
-        "The fitted line now represents our data quite well."
+        "The fitted line now represents our data quite well.\n",
+        "For neural networks, if we have millions of images to train on, updating the parameters for each training example is too expensive. Hence we divide the dataset into minibatches of a few images. The step that would change in the \n",
+        "``` update()``` function is that we replace ``` y_hat = x@a``` with  ```y_hat = x[rand_idx]@a ``` where ```rand_idx``` chooses some images to form the minibatch. \n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ySz4Z_6_4TNi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
