--- a/Lesson2_SGD.ipynb
+++ b/Lesson2_SGD.ipynb
@@ -6,7 +6,7 @@
       "name": "Lesson2-SGD.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPjQOQ1Ehel6+A29Vxue5/g",
+      "authorship_tag": "ABX9TyPnuyVcaL1zHilf/WN299HT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -487,7 +487,7 @@
       "source": [
         "The fitted line now represents our data quite well.\n",
         "For neural networks, if we have millions of images to train on, updating the parameters for each training example is too expensive. Hence we divide the dataset into minibatches of a few images. The step that would change in the \n",
-        "``` update()``` function is that we replace ``` y_hat = x@a``` with  ```y_hat = x[rand_idx]@a ``` where ```rand_idx``` chooses some images to form the minibatch. \n",
+        "``` update()``` function is that we replace ``` y_hat = x@a``` with  ```y_hat = x[rand_idx]@a ``` where ```rand_idx``` chooses some images to form the minibatch. Hence, a random set of points (minibatch) is used to update the weights in each iteration. SGD = Gradient descent using minibatches.\n",
         "\n"
       ]
     },
