--- a/Lesson4_collaborative_filtering.ipynb
+++ b/Lesson4_collaborative_filtering.ipynb
@@ -6,7 +6,7 @@
       "name": "Lesson4-collaborative_filtering.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNmCRTX3nAodE9aHqCzjzD2",
+      "authorship_tag": "ABX9TyNHMJYevw28R1gZV/rDfHTD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -887,6 +887,8 @@
       },
       "source": [
         "# Setup the learner\n",
+        "#Collab_learner creates a learner for collaborative filtering on data. \n",
+        "#More specifically, it binds data with an EmbeddingDotBias model\n",
         "learn = collab_learner(data, n_factors=40, y_range=y_range, wd=1e-1)"
       ],
       "execution_count": 0,
@@ -904,6 +906,7 @@
         "outputId": "8f9e3370-9cf7-464e-a2f3-222babe4502e"
       },
       "source": [
+        "#Find the learning rate\n",
         "learn.lr_find()\n",
         "learn.recorder.plot(skip_end=15)"
       ],
@@ -1009,7 +1012,7 @@
         "outputId": "e23f2fb0-1ffb-4f6c-b659-b10ad41ba9a4"
       },
       "source": [
-        "#Fit the model for 5 epochs with a learning rate of 5e-3\n",
+        "#Train the model for 5 epochs with a learning rate of 5e-3\n",
         "# which might work well, as seen from above graph\n",
         "learn.fit_one_cycle(5, 5e-3)"
       ],
@@ -1201,6 +1204,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5mPC1-UMhHCX",
+        "colab_type": "text"
+      },
+      "source": [
+        "The Embeddings we have learned are a low dimensional representation for users and items. They should contain some interesting features which we can extract to have better insight. \n",
+        "For the given movies, we extract  biases and mean ratings in order to find out which movies are generally rated low or high (by most users). In most cases, high mean ratings correspond to high biases and vice versa.\n",
+        "However, some movies with high mean rating can have a low bias. Those are probably niche movies rated by a small number of users. Thus, bias turns out to be more descriptive indicator of the phenomenon."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "iWjLreiVQ9uq",
@@ -1267,12 +1282,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 272
         },
-        "outputId": "022eb867-7eff-43ce-a9e4-9bf2f2717eb4"
+        "outputId": "616aefae-20e1-454f-e739-2a40d8146620"
       },
       "source": [
-        "sorted(movie_ratings, key=item0)[:15]"
+        "sorted(movie_ratings, key=item0)[:15]\n",
+        "# Bias               Movie                   Rating"
       ],
-      "execution_count": 41,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1298,7 +1314,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 53
         }
       ]
     },
@@ -1314,6 +1330,7 @@
         "outputId": "ce6eb4d1-693c-46e2-b1f3-181d86b30fb2"
       },
       "source": [
+        "#Sort in the reverse order \n",
         "sorted(movie_ratings, key=lambda o: o[0], reverse=True)[:15]"
       ],
       "execution_count": 42,
