--- a/Lesson5_SGD.ipynb
+++ b/Lesson5_SGD.ipynb
@@ -6,7 +6,7 @@
       "name": "Lesson5_SGD.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPrt6WPhWZvabt3oopvD+Yu",
+      "authorship_tag": "ABX9TyN+4LmdKx/Zjapb9CLg5m4s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1098,7 +1098,7 @@
       "source": [
         "Plots: On the left side is the learning rate, on the right side, we have momentum.\n",
         "When learning rate is small, momentum is large and vice versa. This is because, when learning rate is small and we're going in the same direction, we might as well go faster.\n",
-        "Both these plots are for changes in one cycle and it can make a huge difference to speedup. \n",
+        "Both these plots are for changes during one cycle and having a dynamic learning rate such as this can make a huge difference to speedup. \n",
         "Note how learning rate increases at first (when we don't know how close we are to the answer) and then decreases (as we get closer to the answer). "
       ]
     },
