--- a/Lesson6_TablularData.ipynb
+++ b/Lesson6_TablularData.ipynb
@@ -6,7 +6,7 @@
       "name": "Lesson6_TablularData.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyONAvdn4R+OO/mV/TQbM8hR",
+      "authorship_tag": "ABX9TyNZIc3/lcI7nyjp/7xqeZKP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2140,6 +2140,23 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ApJDT8bMs87_",
+        "colab_type": "text"
+      },
+      "source": [
+        "In this lesson we considered dropout as a way of regularization. BatchNorm is another, and we should always use that. Other ways previously discussed include weight decay (same or subset of L2 norm regularization?). Next, in this lesson, we will look at data augmentation as a regularization. Hence, to sum up, methods of regularization include:\n",
+        "\n",
+        "\n",
+        "1.   Weight decay\n",
+        "2.   DropOut\n",
+        "3.   BatchNorm\n",
+        "4.   Data Augmentation\n",
+        "\n"
+      ]
     }
   ]
 }
