--- a/Lesson6_data_augmentation.ipynb
+++ b/Lesson6_data_augmentation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Lesson6_data_augmentation.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOeNKznyMkmd+0wokkh+Pba",
+      "authorship_tag": "ABX9TyOZmDukNyB76Zy/OZ74y9Ab",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "29E7IltsH047",
+        "colab_type": "text"
+      },
+      "source": [
+        "In this lesson, we explore data augmentation techniques and the improvements it can bring to our model."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "mp2Dkm5Ewr6b",
@@ -59,6 +69,7 @@
         "colab": {}
       },
       "source": [
+        "#Batch size\n",
         "bs = 64"
       ],
       "execution_count": 0,
@@ -84,7 +95,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Data augmentation"
+        "# Data augmentation"
       ]
     },
     {
@@ -207,6 +218,7 @@
         "colab": {}
       },
       "source": [
+        "\n",
         "data = get_data(224,bs)"
       ],
       "execution_count": 0,
@@ -404,6 +416,7 @@
         "colab": {}
       },
       "source": [
+        "#Increasing the size of the images is another way of augmentation\n",
         "data = get_data(352,bs)\n",
         "learn.data = data"
       ],
@@ -1243,7 +1256,7 @@
         "colab_type": "text"
       },
       "source": [
-        "***Hooks****: A Pytorch feature that lets you hook into Pytorch machinery itself and run any arbitrary Python code you want."
+        "***Hooks***: A Pytorch feature that lets you hook into Pytorch machinery itself and run any arbitrary Python code you want."
       ]
     },
     {
@@ -1271,6 +1284,7 @@
         "def hooked_backward(cat=y):\n",
         "    with hook_output(m[0]) as hook_a: \n",
         "        with hook_output(m[0], grad=True) as hook_g:\n",
+        "            #Forward pass: Pass the input xb (after converting to minibatch)\n",
         "            preds = m(xb)\n",
         "            preds[0,int(cat)].backward()\n",
         "    return hook_a,hook_g"
@@ -1300,7 +1314,7 @@
         "colab": {}
       },
       "source": [
-        "#Use hook to get the output of the convolution part of the model, before the avg pooling\n",
+        "#Use hook to get the output (activations) of the convolution part of the model, before the avg pooling\n",
         "acts  = hook_a.stored[0].cpu()\n",
         "acts.shape"
       ],
@@ -1357,6 +1371,7 @@
         "colab": {}
       },
       "source": [
+        "# Function to plot heatmap\n",
         "def show_heatmap(hm):\n",
         "    _,ax = plt.subplots()\n",
         "    xb_im.show(ax)\n",
@@ -1375,6 +1390,7 @@
         "colab": {}
       },
       "source": [
+        "#Use the avg activations (output of convolutional part of network) to plot heatmap\n",
         "show_heatmap(avg_acts)"
       ],
       "execution_count": 0,
@@ -1393,6 +1409,19 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Awq7QusKuDNd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1424,6 +1453,7 @@
       },
       "source": [
         "grad = hook_g.stored[0][0].cpu()\n",
+        "#average\n",
         "grad_chan = grad.mean(1).mean(1)\n",
         "grad.shape,grad_chan.shape"
       ],
@@ -1581,6 +1611,7 @@
         "colab": {}
       },
       "source": [
+        "#The newfoundland is picked out correctly\n",
         "show_heatmap(mult)"
       ],
       "execution_count": 0,
