--- a/AudioClassificationExample.ipynb
+++ b/AudioClassificationExample.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "AudioClassificationExample.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMN2oaRASJfWPiNV111j172",
+      "authorship_tag": "ABX9TyMTQrvqCKkcOQHALS07SSA9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -308,8 +308,8 @@
         "outputId": "1b5d7d28-b376-42bd-e2ea-d6215423ab7d"
       },
       "source": [
-        "n_mels =128\n",
-        "fmin = 20 \n",
+        "n_mels =128 #choosing mels\n",
+        "fmin = 20  \n",
         "fmax = 10000\n",
         "mel_spec = librosa.feature.melspectrogram(clip, n_fft=n_fft, hop_length=hop_length, n_mels=n_mels, sr=sample_rate, power=1.0, fmin=fmin, fmax=fmax)\n",
         "mel_spec_db = librosa.amplitude_to_db(mel_spec, ref=np.max)\n",
